Fix: Minor UI and logic adjustments for Admin features
- Reduced the size of some buttons and modified spacing in the CircularButtons component.
- Refactored the AdminLogoutButton to appear only when the admin is authenticated.
- Updated AdminDashboard UI with changes in the sidebar's layout and button styles.
- Adjusted the position of the profile image in the Sidebar and fixed minor layout issues.
- Removed the AdminLogoutButtonMobile component from the NavbarMenuMobile.
- Updated logic for admin verification in the AdminAuthContext to handle token verification errors more robustly.

--- a/client/src/components/Button/CircularButtons.css
+++ b/client/src/components/Button/CircularButtons.css
@@ -4,7 +4,7 @@
     border-radius: 50%; /* Hace que el botón sea circular */
     width: 30px; /* Ajusta el tamaño según prefieras */
     height: 30px; /* Ajusta el tamaño según prefieras */
-    margin: 10px !important; /* Espaciado entre los botones */
+    margin: 5px !important; /* Espaciado entre los botones */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra para darle profundidad */
     transition: background-color 0.3s ease !important;
   }
