--- a/client/src/pages/Auth/Auth.module.css
+++ b/client/src/pages/Auth/Auth.module.css
@@ -1,3 +1,5 @@
 .auth{
     background-image: linear-gradient(var(--primary-color), var(--secondary-color));
+    box-shadow: 0 5px 20px 3px var(--secondary-color);
+    
 }
